# building_agents

./: .gitignore  README.md
Notebooks/: Store_Query_Embeddings.ipynb  Text_to_SQL_Workflow.ipynb
Notes/: Agents.md
chatbot/: README.md  requirements.txt
chatbot/backend/: agent_core.py  cli_app.py  load_env.py  mcp_client.py  search_mcp_server.py  web_api.py
chatbot/frontend/: package-lock.json
chatbot/frontend/src/: App.css  App.jsx  index.css
langchain_agents/: __init__.py  agent.py
langchain_agents/skills/: __init__.py  code_generator.py  code_reviewer.py
learning_langchain/: LangChain_notes.md  README.md  agent_with_memory.py  chatbot.py  financial_analyst.py  financial_analyst_workflow.py  hello_agent.py  requirements.txt
tests/langchain_agents/: test_agent.py  test_skills.py
text_to_sql/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
text_to_sql/data/chromadb/d8d021d2-cde0-4c1a-b595-f47b493c14ff/: index_metadata.pickle
text_to_sql/tests/: test_common.py  test_db_schema_manager.py  test_generate_query_embeddings.py  test_settings.py  test_text_to_sql.py
text_to_sql/text_to_sql/: __init__.py  common.py  db_schema_manager.py  generate_query_embeddings.py  settings.py  text_to_sql.py
text_to_sql/text_to_sql/settings/: colab.yaml  defaults.yaml  dev.yaml  prod.yaml
